--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,10 @@ html, body {
     font-family: 'Ubuntu-Regular', Arial, sans-serif !important;
 }
 
+a {
+    text-decoration: none !important;
+}
+
 .card-main {
     border-radius: 20px;
     height: 615px;
@@ -166,4 +170,115 @@ input::-ms-input-placeholder {
     background-color: #174a8a;
     border-color: #174a8a;
 
+}
+
+.btn-custom {
+    color: #919095;
+    font-size: 15px !important;
+    line-height: 30px;
+}
+
+.btn-custom:hover {
+    color: #01295a;
+}
+
+.plan {
+    border-radius: .5rem;
+    padding: 20px;
+}
+
+.plan:hover, .plan-active {
+    border: 1px solid #534aa7;
+    border-radius: .5rem;
+}
+
+.plan > img {
+    width: 40px;
+}
+
+.plan > h5 {
+    color: #022656;
+    font-size: 16px !important;
+    font-weight: 700;
+    margin: 40px 0px 5px 0px;
+}
+
+.plan > p {
+    color: #919095;
+    font-size: 14px !important;
+    margin: 0;
+}
+
+.plan-slider {
+    padding: 15px;
+    text-align: center;
+}
+
+.plan-slider label {
+    margin: 0px 5px 0px 5px;
+    font-size: 14px !important;
+    font-weight: 600;
+}
+
+.plan-slider label:last-child {
+    color: #919095;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 52px;
+    height: 25px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #022656;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 17px;
+    width: 17px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: #ccc;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #ccc;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
