--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,3 +271,80 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+.add-ons {
+    border-radius: .5rem;
+    /* padding: 20px; */
+    padding: 20px 20px 20px 60px;
+}
+
+.add-ons:hover, .add-ons-active {
+    border: 1px solid #534aa7;
+    border-radius: .5rem;
+}
+
+.add-ons > h5 {
+    color: #022656;
+    font-size: 16px !important;
+    font-weight: 700;
+    margin: 0px 0px 3px 0px;
+}
+
+.add-ons > p {
+    color: #919095;
+    font-size: 15px;
+    margin: 0px 0px 3px 0px;
+}
+
+.add-ons > p > small {
+    color: #534aa7;
+    font-size: 14px;
+    margin: -10px 0px 3px 0px;
+    float: right;
+}
+
+.custom-check {
+    position: absolute;
+    top: 30px;
+    left: 20px;
+    padding: 20px;
+}
+
+.custom-check label {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 20%;
+    cursor: pointer;
+    height: 18px;
+    left: 0px;
+    position: absolute;
+    top: 0px;
+    width: 18px;
+}
+
+.custom-check label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 3px;
+    opacity: 0;
+    position: absolute;
+    top: 4px;
+    transform: rotate(-45deg);
+    width: 12px;
+}
+
+.custom-check input[type="checkbox"] {
+    visibility: hidden;
+}
+
+.custom-check input[type="checkbox"]:checked + label {
+    background-color: #534aa7;
+    border-color: #534aa7;
+}
+
+.custom-check input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+}
